# son-of-haskell-cnix-store

./: .gitignore  CHANGELOG.md  LICENSE  flake.nix  son-of-haskell-cnix-store.cabal
c-nix-sys/: c-nix-sys.cabal
c-nix-sys/exe/: Main.hs
c-nix-sys/src/System/Nix/C/: Store.hsc  Util.hsc
exe/: Main.hs
src/: CNix.hsc  MyLib.hsc
src/System/Nix/C/: Expr.hsc  Util.hsc
