cabal-version:      3.4
name:               son-of-haskell-cnix-store
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Sander
maintainer:         hey@sandydoo.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
                      System.Nix.C.Expr
                      System.Nix.C.Store
                      System.Nix.C.Util
    build-depends:    base >=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
    pkgconfig-depends: nix-expr-c, nix-store-c

executable son-of-haskell-cnix-store-exe
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   exe
    main-is:          Main.hs
    build-depends:
        base >=4.14.3.0,
        son-of-haskell-cnix-store

test-suite son-of-haskell-cnix-store-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.14.3.0,
        son-of-haskell-cnix-store
